# adongGame

./: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/: 00-游戏总览.md  01-弟子系统.md  02-修炼与境界.md  03-宗门经营.md  04-事件系统.md  05-战斗系统.md  06-界面与立绘.md  07-技术架构.md  08-开发路线图.md  09-命途与师承.md
src/: main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/engine/: index.ts
src/engine/ai/: curves.ts  decision.ts  index.ts  utility.ts
src/engine/content/: artifacts.ts  beats.ts  constants.ts  facilities.ts  gongfa.ts  names.ts  pills.ts  traits.ts
src/engine/core/: bus.ts  clock.ts  rng.ts
src/engine/state/: disciple.ts  world.ts
src/engine/systems/: behavior.ts  biography.ts  breakthrough.ts  character-ai.ts  combat.ts  cultivation.ts  economy.ts  events.ts  helpers.ts  lifecycle.ts  lineage.ts  mood.ts  omens.ts  peaks.ts  psyche.ts  recruitment.ts  relationship.ts  victory.ts
src/headless/: autoPlayer.ts  run.ts
src/shared/: rarity.ts  types.ts
src/ui/: App.vue  sound.ts
src/ui/components/: Biography.vue  (+3 more)
tests/: ai.test.ts  biography.test.ts  breakthrough.test.ts  combat.test.ts  commands.test.ts  content-access.test.ts  content.test.ts  core-extra.test.ts  coverage-fill.test.ts  coverage-restore.test.ts  disciple.test.ts  engine-internals.test.ts  event-routing.test.ts  events-exhaustive.test.ts  events.test.ts  lifecycle.test.ts  mingtu.test.ts  peaks-lineage.test.ts  psyche.test.ts  rng.test.ts  save.test.ts  simulation.test.ts  strategy.test.ts  victory.test.ts
(+38 files in other folders)
