[package]
name = "wending-xiantu"
version = "0.1.0"
description = "问鼎仙途 - 修真宗门模拟器"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
